# he-mnist

./: README.md  deep_test_data.npz  deep_weights.npz  main.py  pyproject.toml  run_deep_he.py
notebooks/: walkthrough.ipynb
src/: bootstrap.py  data.py  encrypt.py  he_inference.py  he_inference_deep.py  model.py  train.py
